--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,12 @@ export(Phi)
 export(Tetrachoric)
 export(YuleQ)
 export(YuleQ.inv)
+import(MASS)
+import(Rdpack)
+import(dplyr)
+import(epitools)
+import(magrittr)
+import(mvtnorm)
+import(sandwich)
+import(stats)
 importFrom(magrittr,"%>%")
